<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/grp_general_settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/shared_pref_is_globally_disabled"
            android:title="@string/sw_globally_disabled" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/grp_slider_settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/sw_logarithmic_id"
            android:title="@string/sw_logarithmic_label"
            app:summary="@string/sw_logarithmic_summary" />
        <ListPreference
            android:defaultValue="3.0"
            android:entries="@array/arr_flick_sensitivity_threshold_names"
            android:entryValues="@array/arr_flick_sensitivity_threshold_values"
            android:key="@string/lst_flick_sensitivity_id"
            android:title="@string/lst_flick_sensitivity_label"
            app:summary="@string/lst_flick_sensitivity_summary" />

    </PreferenceCategory>

</PreferenceScreen>